--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -2,10 +2,14 @@ pipeline {
     agent any
 
     stages {
-        stage('Ejercicio 1') {
+       stage('Test') {
+            agent {
+                docker {
+                image 'python:3.6-slim'
+                }
+            }
             steps {
-                echo "Job: ${env.JOB_NAME}"
-                echo "Branch: ${env.BRANCH_NAME}"
+                sh 'pytest'
             }
         }
     }
