ejercicio 2. con instalacion de pytest

--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
                 }
             }
             steps {
+                sh 'pip install pytest'
                 sh 'pytest'
             }
         }
