--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -1,16 +1,18 @@
 pipeline {
-    agent any
 
+    agent { dockerfile true }
     stages {
        stage('Test') {
-            agent {
-                docker {
-                image 'python:3.6-slim'
-                }
-            }
+            
             steps {
-                sh 'pip install pytest'
-                sh 'pytest'
+                sh 'pytest -q'
+            }
+        }
+         stage('Lint') {
+           
+            steps {
+                sh 'pip install -r requirements.txt flake8 mypy'
+                sh 'make lint'
             }
         }
     }
