--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -1,19 +1,31 @@
-pipeline {
+/*
+  Practica 2 - Jenkinsfile dummy (PUNTO DE PARTIDA)
 
-    agent { dockerfile true }
-    stages {
-       stage('Test') {
-            
-            steps {
-                sh 'pytest -q'
-            }
+  Este Jenkinsfile es intencionalmente simple. En la Practica 2 iras anadiendo
+  piezas (stages, agents, funciones Groovy, Docker build, docker compose, etc.)
+  hasta construir un pipeline CI/CD completo.
+*/
+
+pipeline {
+  // `agent any` = el pipeline se ejecuta en cualquier nodo/agente disponible.
+  agent any
+
+  stages {
+    stage('Test') {
+      /*
+        `agent` dentro de un stage permite que SOLO ese stage se ejecute en un contexto concreto.
+        En este caso, usamos Docker como capa de virtualizacion: los comandos se ejecutan dentro
+        de un contenedor temporal.
+      */
+      agent {
+        docker {
+          image 'maven:3.8.6-openjdk-11-slim'
         }
-         stage('Lint') {
-           
-            steps {
-                sh 'pip install -r requirements.txt flake8 mypy'
-                sh 'make lint'
-            }
-        }
+      }
+      steps {
+        sh 'mvn -version'
+        sh 'echo "Stage dummy. En la Practica 2 ejecutaras aqui los tests unitarios."'
+      }
     }
+  }
 }
