--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -23,6 +23,7 @@ pipeline {
         }
       }
       steps {
+        sh 'pip install -r requirements.txt || true'
         sh 'pytest'
       }
     }
