--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -26,9 +26,7 @@ pipeline {
       steps {
         // Instalamos linters y dependencias extra
         sh '''
-          pip install -r requirements.txt flake8 mypy black
-          make reformat   # <--- formatea automáticamente el código
-          make lint       # <--- verifica estilo y tipos         
+          pip install -r requirements.txt flake8 mypy && make reformat && make lint          
         '''
       }
     }
