--- a/devops/Jenkinsfile
+++ b/devops/Jenkinsfile
@@ -1,10 +1,9 @@
-/*
-  Practica 2 - Jenkinsfile dummy (PUNTO DE PARTIDA)
-
-  Este Jenkinsfile es intencionalmente simple. En la Practica 2 iras anadiendo
-  piezas (stages, agents, funciones Groovy, Docker build, docker compose, etc.)
-  hasta construir un pipeline CI/CD completo.
-*/
+// Función reusable para ejecutar cualquier bloque dentro de Docker
+def runInDocker(String image, Closure body) {
+    docker.image(image).inside {
+        body()
+    }
+}
 
 pipeline {
   // `agent any` = el pipeline se ejecuta en cualquier nodo/agente disponible.
@@ -18,32 +17,29 @@ pipeline {
       }
     }
     stage('Lint') {
-      agent {
-        docker {
-          image 'devops/ci:latest'
-        }
-      }
       steps {
-        // Instalamos linters y dependencias extra
-        sh '''
-          pip install -r requirements.txt flake8 mypy && make reformat && make lint          
-        '''
+        script {
+          runInDocker('devops/ci:latest') {
+            // Instalamos linters y dependencias extra
+            sh '''
+               pip install -r requirements.txt flake8 mypy black
+               make reformat
+               make lint
+            '''
+          }
+        }
       }
     }
-    stage('Test') {
-      /*
-        `agent` dentro de un stage permite que SOLO ese stage se ejecute en un contexto concreto.
-        En este caso, usamos Docker como capa de virtualizacion: los comandos se ejecutan dentro
-        de un contenedor temporal.
-      */
-      agent {
-        docker {
-          image 'python:3.6-slim'
-        }
-      }
+    stage('Test') {            
       steps {
-        sh 'pip install -r requirements.txt || true'
-        sh 'pytest'
+        script {
+          runInDocker('python:3.6-slim') {
+            sh '''
+                  pip install -r requirements.txt || true
+                  pytest
+            '''
+          }
+        }
       }
     }
     stage('Info') {
