Pract-3 Ej-1 github workflow ci.yaml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,16 @@
 name: CI (dummy)
 
 on:
+  push:
+    branches: ['**'] # todas las ramas
+  pull_request:
+    branches: ['develop','master']
   workflow_dispatch:
+    inputs:
+      RUN_CD:
+        description: 'Run CD stage'
+        required: false
+        default: 'false'
 
 jobs:
   dummy:
