Prac-3 Ej-4 Inputs workflow_dispatch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,14 @@ on:
         description: 'Run CD stage'
         required: false
         default: 'false'
+      DEPLOY_ENV:
+        description: 'Deployment environment'
+        required: false
+        type: choice
+        options:
+          - DEV
+          - PRO
+        default: DEV
 
 # Variables de entorno a nivel de workflow
 env:
@@ -58,3 +66,8 @@ jobs:
         run: |
           echo "IMAGE_NAME (expression): ${{ env.IMAGE_NAME }}"
           echo "APP_URL (expression): ${{ env.APP_URL }}"
+
+      - name: Print workflow_dispatch inputs
+        run: |
+          echo "RUN_CD = ${{ inputs.RUN_CD }}"
+          echo "DEPLOY_ENV = ${{ inputs.DEPLOY_ENV }}"
