--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,11 +76,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          apt-get update
+          apt-get install -y make
+          pip install -r requirements.txt flake8 mypy black
 
       - name: Lint
         run: |
-          pip install -r requirements.txt flake8 mypy black
           make reformat
           make lint
 
