--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       # Step 2: Build Docker image
       - name: Build Docker image
         run: |
-          docker build -t devops/ci:latest .
+          docker build -t $IMAGE_NAME .
 
       # Step 3: Info
       - name: Info
