--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       (github.ref_name == 'develop' || github.ref_name == 'master')
-      && (github.event_name == 'workflow_dispatch' && inputs.RUN_CD == 'true')
+      && (github.event_name != 'workflow_dispatch' || inputs.RUN_CD == 'true')
     # Sobrescribiendo una variable a nivel de job
     env:
       APP_URL: "https://localhost:5001"
