Update ci.yml Pract-3 Ej-Final runner self-hosted

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,8 @@ env:
   APP_URL: "http://localhost:5001/"
 jobs:
   dummy:
-    runs-on: ubuntu-latest
+    # runner self-hosted
+    runs-on: [self-hosted, linux, docker] #ubuntu-latest
     steps:
       - name: Mostrar contexto
         run: |
