Update ci.yml Pract-3 Ej-Final comments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
   #ci:
   build-docker:
     runs-on: ubuntu-latest
+    # Condiciones por rama: CD solo en develop/master
     if: |
       (github.ref_name == 'develop' || github.ref_name == 'master')
       && (github.event_name != 'workflow_dispatch' || inputs.RUN_CD == 'true')
@@ -49,11 +50,11 @@ jobs:
     env:
       APP_URL: "https://localhost:5001"
     steps:
-      # Step 1: Clonar repository
+      # Clonar repository
       - name: Checkout repository
         uses: actions/checkout@v4
       
-      # Step 3: Info
+      # Info
       - name: Info
         run: |
           echo "Branch: ${{ github.ref_name }}"
@@ -61,7 +62,7 @@ jobs:
           echo "Runner OS: ${{ runner.os }}"
           echo "Runner Name: ${{ runner.name }}"
 
-      # Step 4: Variables de entorno
+      # Variables de entorno
       - name: Env variables in shell
         run: |
           echo "IMAGE_NAME (shell): $IMAGE_NAME"
@@ -77,7 +78,7 @@ jobs:
           echo "RUN_CD = ${{ inputs.RUN_CD }}"
           echo "DEPLOY_ENV = ${{ inputs.DEPLOY_ENV }}"
 
-      #Step5: Install dependencies and Lint
+      #Install dependencies and Lint
       - name: Install dependencies
         run: |
           sudo apt-get update
@@ -93,7 +94,7 @@ jobs:
         run: |
           make test
 
-      - name: Build Docker image
+      - name: Build Docker image en CI
         run: |
           docker build -f devops/Dockerfile -t $IMAGE_NAME .
 
@@ -103,7 +104,7 @@ jobs:
       #- name: Run e2e tests
       #  run: |
       #    curl -f http://localhost:5001/  # usa -f para que falle si status != 2xx
-      - name: Wait for app
+      - name: Run e2e tests - Wait for app
         run: |
           for i in {1..10}; do
             if curl -s http://localhost:5001/ > /dev/null; then
