--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           echo "Branch: $GITHUB_REF_NAME"
   #ci:
   build-docker:    
-    runs-on: [self-hosted, linux, docker] #ubuntu-latest
+    runs-on: ubuntu-latest
     # Condiciones por rama: CD solo en develop/master
     if: |
       (github.ref_name == 'develop' || github.ref_name == 'master')
