--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,19 +100,16 @@ jobs:
       #- name: Run e2e tests
       #  run: |
       #    curl -f http://localhost:5001/  # usa -f para que falle si status != 2xx
-      - name: Run e2e tests - Wait for app
-        run: |
-          for i in {1..10}; do
-            if curl -s http://localhost:5001/ > /dev/null; then
-              echo "App is up!"
-              exit 0
-            fi
-            echo "Waiting for app..."
-            sleep 3
-          done
-          echo "App did not start"
-          exit 1
       
+      - name: Run e2e tests Wait for app
+        run: |
+          timeout 60 bash -c '
+          until curl -s http://localhost:5001/ > /dev/null; do
+          echo "Waiting for app..."
+          sleep 3
+          done
+          '
+
       - name: Cleanup
         if: always()
         run: |
