Update ci.yml APP_URL http

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       && (github.event_name != 'workflow_dispatch' || inputs.RUN_CD == 'true')
     # Sobrescribiendo una variable a nivel de job
     env:
-      APP_URL: "https://app:5000/"
+      APP_URL: "http://app:5000/"
     steps:
       # Clonar repository
       - name: Checkout repository
